# embeddable-rest-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: headers.rs  lib.rs  main.rs  mock_stream.rs  parsed_first_line.rs  routes.rs  server.rs  status_text.rs
tests/: anyhow.rs  common.rs  integration_test.rs  macro.rs  readme.rs
